# project_dream

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
99.올드포맷/: Project_Overview_v4_20260226.docx  WorldBible_Pramisio_ArchivePlaza_v3_0_20260223.docx  WorldBible_Pramisio_ArchivePlaza_v4_0_20260223.docx  WorldBible_Pramisio_ArchivePlaza_v4_1_20260224.docx  WorldBible_Pramisio_ArchivePlaza_v4_2_20260226.docx  WorldBible_Pramisio_ArchivePlaza_v4_3_20260226.docx  WorldBible_v2_0_Rebuild.docx  WorldBible_v2_2_cleaned_20260220.docx  WorldBible_v2_3_cleaned_20260220_v2.docx  WorldBible_v3_1_Addendum_Outline_Draft.docx  바이브코더가 알면 좋은 개발 이론 정리.docx  월드 바이블 v1.1.docx  월드 바이블 v1.2_커뮤니티 창시자_LMM.docx  월드 바이블 v1.docx  프로젝트 개요.docx
examples/: world_master_template.json
packs/: board_pack.json  community_pack.json  entity_pack.json  pack_manifest.json  persona_pack.json  rule_pack.json  template_pack.json  world_pack.json
scripts/: dev_serve.sh  regress_live.sh  server_ctl.sh  smoke_api.sh
tests/: test_app_service_kb_context.py  test_authoring_compile.py  test_canon_gate.py  test_cli_compile_e2e.py  test_cli_eval_export_e2e.py  test_cli_evaluate_e2e.py  test_cli_ingest_e2e.py  test_cli_module_entrypoint.py  test_cli_regress_e2e.py  test_cli_regress_live.py  test_cli_simulate_e2e.py  test_cli_smoke.py  test_contracts.py  test_data_ingest.py  test_env_engine.py  test_env_engine_policy_matrix.py  test_env_state_machine.py  test_eval_export.py  test_eval_quality_metrics.py  test_eval_report_quality_rules.py  test_eval_suite.py  test_gate_pipeline.py  (+25 more)
(+211 files in other folders)
